LayoutTests/fast/forms/script-tests/ValidityState-tooLong-textarea.js
@@ -3,10 +3,11 @@ description('Tests for tooLong flag with &lt;textarea> elements.');
 var textarea = document.createElement('textarea');
 document.body.appendChild(textarea);
 
-// No maxlength and no value
+debug('No maxlength and no value');
 shouldBeFalse('textarea.validity.tooLong');
 
-// Non-dirty value.
+debug('');
+debug('Non-dirty value');
 textarea.defaultValue = 'abcde';
 textarea.maxLength = 3;
 shouldBe('textarea.value.length', '5');
@@ -16,7 +17,8 @@ textarea.defaultValue = 'abcdef';
 shouldBe('textarea.value.length', '6');
 shouldBeFalse('textarea.validity.tooLong');
 
-// Dirty value and longer than maxLength.
+debug('');
+debug('Dirty value and longer than maxLength');
 textarea = document.createElement('textarea');
 document.body.appendChild(textarea);
 textarea.defaultValue = 'abcde';
@@ -30,8 +32,45 @@ shouldBeTrue('textarea.validity.tooLong');
 document.execCommand('delete');
 shouldBeFalse('textarea.validity.tooLong');
 
-// Sets a value via DOM property.
+debug('');
+debug('Sets a value via DOM property');
+textarea = document.createElement('textarea');
+document.body.appendChild(textarea);
+textarea.maxLength = 3;
 textarea.value = 'abcde';
 shouldBeTrue('textarea.validity.tooLong');
+
+debug('');
+debug('Grapheme length is not greater than maxLength though character length is greater');
+// fancyX should be treated as 1 grapheme.
+// U+0305 COMBINING OVERLINE
+// U+0332 COMBINING LOW LINE
+var fancyX = "x\u0305\u0332";
+textarea = document.createElement('textarea');
+document.body.appendChild(textarea);
+textarea.value = fancyX; // 3 characters, 1 grapheme cluster.
+textarea.maxLength = 1;
+shouldBeFalse('textarea.validity.tooLong');
+
+debug('');
+debug('A value set by resetting a form or by a child node change doesn\'t make tooLong true.');
+// Make a dirty textarea.
+var parent = document.createElement('div');
+document.body.appendChild(parent);
+parent.innerHTML = '<form><textarea maxlength=2>abc</textarea></form>';
+textarea = parent.firstChild.firstChild;
+textarea.value = 'def';
+shouldBeTrue('textarea.validity.tooLong');
+parent.firstChild.reset();
+shouldBe('textarea.value', '"abc"');
+shouldBeFalse('textarea.validity.tooLong');
+
+parent.innerHTML = '<textarea maxlength=2>abc</textarea>';
+textarea = parent.firstChild;
+textarea.value = 'def';
+shouldBeTrue('textarea.validity.tooLong');
+parent.firstChild.innerHTML = 'abcdef';
+shouldBe('textarea.value', '"abcdef"');
+shouldBeFalse('textarea.validity.tooLong');
 
 var successfullyParsed = true;
